--- a/Market_Trends_of_Commercial_Laptops.ipynb
+++ b/Market_Trends_of_Commercial_Laptops.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1Qk9AXAw0dKf5kMH6CwKAsPUqRQb3RB4q",
-      "authorship_tag": "ABX9TyNh5TJoDvpDjlnJWO0F2Tgb",
+      "authorship_tag": "ABX9TyP/bxYYBwQU9A/dZsIDQsje",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
     {
       "cell_type": "code",
       "source": [
-        "excel_file_path = \"/content/drive/MyDrive/Anonuevo - DSELE11 Week 2 - Practice Problem.xlsx\"\n",
+        "excel_file_path = \"/content/drive/MyDrive/Laptops.xlsx\"\n",
         "sheet_name = 'Dataset 2'\n",
         "columns_to_exclude = ['Unnamed: 12', 'Unnamed: 13', 'Unnamed: 14']\n",
         "df = pd.read_excel(excel_file_path, sheet_name=sheet_name)\n",
